swagger,s3 & frontend changes done
