# Project/backend/routes/cardroutes.js
@@ -1,7 +1,7 @@
 const express = require('express')
 const {defaultroute} = require('../controllers/user')
 const router = express.Router()
-const { createcard,getcardbyid,deletecardbyid,updatecard,getallcards,findallcardsbyname, addcard, removecard } = require("../controllers/card")
+const { createcard,getcardbyid,deletecardbyid,updatecard,getallcards,findallcardsbyname, addcard, removecard, getonecard } = require("../controllers/card")
 const { user } = require('../models/user')
 
 router.post('/createcard',createcard)
@@ -9,9 +9,11 @@ router.post('/:id/addcard',addcard)
 router.post('/:id/removecard',removecard)
 
 // router.post('/updatecard',updatecard)
-router.post('/:id/deletecardbyid',deletecardbyid)
+router.post('/deletecardbyid',deletecardbyid)
 // router.get('/findcardbyid/:id',getcardbyid);
 router.get('/getallcards',getallcards)
+router.get('/:cardid/getallcards',getonecard)
+
 // router.post('/findallcardbyname/:cname',findallcardsbyname)
 
 
